--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.PlaylistMaker"
         tools:targetApi="31">
         <activity
-            android:name=".search.ui.SearchActivity"
+            android:name=".search.ui.screen.SearchActivity"
             android:exported="false" />
         <activity
             android:name=".player.ui.AudioplayerActivity"
