--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PlaylistMaker"
         tools:targetApi="31">
-        <activity
-            android:name=".search.ui.screen.SearchActivity"
-            android:exported="false" />
+
         <activity
             android:name=".player.ui.AudioplayerActivity"
             android:exported="false" />
@@ -28,17 +26,23 @@
         <activity
             android:name=".settings.ui.SettingsActivity"
             android:exported="false" />
+
+        <!-- Добавили RootActivity и сделали её главной -->
+        <activity android:name=".root.ui.RootActivity"
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        <meta-data
+            android:name="android.app.lib.name"
+            android:value="" />
+        </activity>
+
         <activity
             android:name=".main.ui.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <meta-data
-                android:name="android.app.lib.name"
-                android:value="" />
+            android:exported="false">
 
         </activity>
     </application>
