--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
 
         <!-- Добавили RootActivity и сделали её главной -->
         <activity android:name=".root.ui.RootActivity"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustNothing">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
