--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -18,24 +18,19 @@
         tools:targetApi="31">
 
         <!-- Добавили RootActivity и сделали её главной -->
-        <activity android:name=".root.ui.RootActivity"
+        <activity
+            android:name=".root.ui.RootActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustNothing">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        <meta-data
-            android:name="android.app.lib.name"
-            android:value="" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.lib.name"
+                android:value="" />
         </activity>
 
-        <activity
-            android:name=".main.ui.MainActivity"
-            android:exported="false">
-
-        </activity>
     </application>
 
 </manifest>
